新增自动执行脚本，及其它接口参数Body
